# AnimMorph

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindGLFW.cmake
src/: CMakeLists.txt  linearAlgebra.h  main.cpp  mesh2D.cpp  mesh2D.h  mouseManager.cpp  mouseable.h  renderer.cpp  renderer.h
src/Camera/: camera.cpp  camera.h
src/Geodesic/: geodesic.cpp  geodesic.h
src/Interpolation/: bezier.cpp  bezier.h  interpolation.h  linear.cpp  linear.h  naturalCubicSpline.cpp  naturalCubicSpline.h
src/Laplacian/: laplacian.cpp  laplacian.h
src/Mesh2D/: loadMesh.cpp  loadMesh.h  mesh2D.cpp  mesh2D.h  meshHelper.cpp  meshHelper.h  outlineToMesh2D.cpp  outlineToMesh2D.h
src/Misc/: pairHash.h
src/Mouse/: mouseManager.cpp  mouseManager.h
src/Renderer/: renderer.cpp  renderer.h
src/ShapeMorph/: shapeMorph.cpp  shapeMorph.h
src/ShapeMorph/ShapeMorphImpl/: edgeInterpolate.cpp  edgeInterpolate.h  embedMesh.cpp  embedMesh.h  flattenEdges.cpp  flattenEdges.h
src/Skeleton/: joint.h  skeleton.cpp  skeleton.h
src/Triangulate/: triangulate.cpp  triangulate.h
